Bug#306 fix: Front end>> Text area not aligned properly at front end, in list view its occupy longer area.

--- a/src/components/com_tjucm/media/css/tjucm.css
+++ b/src/components/com_tjucm/media/css/tjucm.css
@@ -6,3 +6,7 @@ margin-left:5px !important;
 #item-form .chzn-container{
 width:200px !important;
 }
+
+p.wordwrap-for-long-description{
+word-break: break-word;
+}
